# RFC-MelhoriaProjetoIBlueIt-

./: readme.md
spo2-wrist-sensor/: ANNOTATIONS.md  CMakeLists.txt  ReadME.md
spo2-wrist-sensor/main/: CMakeLists.txt  main.c
spo2-wrist-sensor/main/app/: app_controller.c  app_controller.h  app_state_machine.c  app_state_machine.h  app_types.h
spo2-wrist-sensor/main/drivers/: i2c_bus.c  i2c_bus.h  max3010x_driver.c  max3010x_driver.h
spo2-wrist-sensor/main/processing/: hr_estimator.c  hr_estimator.h  signal_quality.c  signal_quality.h  spo2_estimator.c  spo2_estimator.h
spo2-wrist-sensor/main/safety/: confidence_engine.c  confidence_engine.h  contact_detector.c  contact_detector.h  pulse_detector.c  pulse_detector.h
spo2-wrist-sensor/main/sensing/: ppg_sampler.c  ppg_sampler.h  sample_buffer.c  sample_buffer.h
spo2-wrist-sensor/main/storage/: config_repo.c  config_repo.h
spo2-wrist-sensor/main/transport/: serial_telemetry.c  serial_telemetry.h
